static/styles.css
h1{
  color: white;
  font-family: myFirstFont;
  text-shadow: 2px 2px 0px rgba(0,0,0,0.2);
}

@font-face {
  font-family: simple;
  src: url(Fonts/simplifica.ttf);
}

@font-face {
    font-family: myFirstFont;
    src: url(Fonts/QanelasBold.otf);
}

@font-face {
  font-family: labelFont;
  src: url(Fonts/QanelasSoft.otf);
  unicode-range: U+20-21, U+3F, U+41-5A, U+61-7A;
}

.textIn {
  background-color: white;
}


/* Place the navbar at the bottom of the page, and make it stick */
.bottomBar {
    padding: 0px;
    background-color: #333;
    overflow: hidden;
    position: fixed;
    bottom: 0;
    width: 110%;
}

/* Style the links inside the navigation bar */
.bottomBar a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

/* Change the color of links on hover */
.navbar a:hover {
    background-color: #ddd;
    color: black;
}


/* Add a color to the active/current link */
.navbar a.active {
    background-color: #4CAF50;
    color: white;
}

label {
  font-family: labelFont, simple;
}

body {
  background-color: #41B3A3;
}

label{
  color: blue;
}

/* Nav Bar styles */
ul {
    list-style-type: none;
    margin: 0px;
    padding: 0;
    overflow: hidden;
    background-color: #000;
    position: fixed;
    top: 0;
    width: 100%;
    font-size: 20px;


}

li {
    float: left;
}

li a {
    display: inline-block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li .navButton:hover {
    background-color: #999;
}

p{
  margin: 10px
}
.navButton {
    background-color: #000;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 15px;
    outline: none;
    font-family: arial;
}

/* navbar styles  (end) */

